--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 1px;
+    padding: 1px;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
