modified home page html and css

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body {
     background-color: #121212;
-    color: #ffffff;
+    color: lightsteelblue;
 }
 header{
     display: flex;
@@ -72,7 +72,7 @@ header nav ul li a{
     color: #888888;
 }
 
-button {
+.herobutton {
     background-color: #e60023;
     border-radius: 3px;
     color: #ffffff;
@@ -110,13 +110,13 @@ button {
     margin-bottom: 10px;
 }
 
-.product-card1{
+.product-card1,.product-card5{
     background-color: #1c1c1c;
     padding: 20px;
     text-align: center;
     transform: scale(0.7);
 }
-.product-card2{
+.product-card2,.product-card4{
     background-color: #1c1c1c;
     padding: 20px;
     text-align: center;
@@ -128,18 +128,7 @@ button {
     text-align: center;
     transform: scale(1.3);
 }
-.product-card4{
-    background-color: #1c1c1c;
-    padding: 20px;
-    text-align: center;
-    transform: scale(0.9);
-}
-.product-card5 {
-    background-color: #1c1c1c;
-    padding: 20px;
-    text-align: center;
-    transform: scale(0.7);
-}
+
 .product-card1 img{
     width: 100px;
     margin-bottom: 10px;
@@ -152,8 +141,7 @@ button {
 }
 .product-card3 img{
     width: 100px;
-    margin-bottom: 10px;
-
+    margin: 0px 0px 10px 0px;
 }
 .product-card4 img{
     width: 100px;
@@ -168,4 +156,233 @@ button {
     margin: 10px 0;
     font-size: 18px;
 }
+/* Top Product */
+.top-product{
+    padding: 40px;
+    background-color: #1c1c1c;
+}
+.top-product h2{
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.product-filters{
+    display: flex;
+}
+.product-filters a{
+    color: lightsteelblue;
+    padding: 4px 8px; 
+    margin: 40px 90px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+.product-filters a:nth-child(1){
+    background-color: #e60023;
+
+}
+.product-filters a:hover{
+    background-color: #e60023;
+    padding: 4px 8px; 
+}
+
+
+
+
+/*----Add To Cart Start------ */
+.Addcart {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: #1c1c1c;
+    padding: 40px 0px 40px 150px;
+    /* text-align: center; */
+    color: lightsteelblue;
+}
+.addcartrow1{
+    /* justify-content: center; */
+}
+
+.addproduct,.Addcart2,.Addcart3,.Addcart4{
+    height: 341px;
+    width: 239px;
+    box-shadow: 0 0px 1px rgb(237, 232, 232);
+    margin: 0px 5px 0px 5px;
+}
+.prodimg {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    margin: 10px 0px 10px 60px;
+}
+.proddetail{
+    padding: 0px 14px;
+    /* display: grid;
+    grid-template-columns: repeat(1 , 1fr);
+    align-content: space-between;
+    grid-gap: 3px; */
+}
+.star{
+    font-size: x-small;
+
+}
+.addcarth3{
+    margin-top: 10px;
+}
+.addcartp{
+    font-size: small;
+    opacity: 0.6;
+}
+.Addcart hr {
+    border: none;
+    height: 1px;
+    background-color: #444;
+    margin: 10px 0 10px 0;
+    padding: 0px 16px 0 16px;
+}
+.actualprice{
+    font-size: larger;
+}
+.proddelete{
+ opacity: 0.6;
+ font-size: medium;
+}
+/* Button Styling */
+.addcartbutton{
+    background-color: #e60023;
+    border-radius: 3px;
+    color: #ffffff;
+    padding: 13px 20px;
+    border: none;
+    cursor: pointer;
+    margin: 14px;
+    width: 90%;
+    transition: background-color 0.3s ease;
+}
+/* Star ratings styling */
+.checked {
+    color:  #b20710;
+    font-size: 16px;
+}
+/* .Addcart h3,p,button{
+    padding-right: 58px;
+
+} */
+
+
+
+
+/* our Advantages Start  */
+.advantages{
+    /* margin: 60px; */
+    background-color: #1c1c1c;
+
+}
+.advantages h2{
+    margin-top: 40px;
+}
+.advantage-name{
+    display: flex;
+    justify-content:space-around;
+    padding: 60px;
+}
+.advantage-name .Delivery,
+.advantage-name .Brand,
+.advantage-name .deels,
+.advantage-name .payments {
+    display: flex; /* Use flexbox to align icon and text horizontally */
+    align-items: center; /* Align items vertically in the center */
+    gap: 15px; /* Add space between the icon and the text */
+}
+.advtwo-txt {
+    font-size: small;
+    opacity: 0.6;
+    margin-top: 3px;
+    display: inline-block;
+  }
+/* footer */
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 40px 0;
+    font-family: 'Arial', sans-serif;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-around;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .footer-column {
+    flex: 1;
+  }
+  
+  .footer-column h4 {
+    margin-bottom: 20px;
+    font-size: 18px;
+  }
+  
+  .footer-column ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-column ul li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-column ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+  }
+  
+  .footer-column ul li a:hover {
+    color: #e63946;
+  }
+  
+  .footer-column form {
+    display: flex;
+  }
+  
+  .footer-column input {
+    padding: 10px;
+    border: none;
+    outline: none;
+    width: 70%;
+  }
+  
+  .footer-column button {
+    padding: 10px;
+    border: none;
+    background-color: #e63946;
+    color: #fff;
+    cursor: pointer;
+    width: 30%;
+  }
+  
+  .footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-top: 1px solid #333;
+  }
+  
+  .footer-bottom p {
+    margin: 0;
+    font-size: 14px;
+  }
+  
+  .footer-social a {
+    margin-left: 20px;
+  }
+  
+  .footer-social img {
+    width: 20px;
+    height: 20px;
+  }
+  
 
