--- a/style.css
+++ b/style.css
@@ -193,28 +193,27 @@ header nav ul li a{
 .Addcart {
     width: 100%;
     height: 100%;
-    display: flex;
+    /* display: grid;
+    grid-template-columns: repeat(4,1fr); */
+    /* display: flex; */
     background-color: #1c1c1c;
     padding: 40px 0px 40px 150px;
     /* text-align: center; */
     color: lightsteelblue;
 }
-.addcartrow1{
-    /* justify-content: center; */
+.Addcartrow1{
+    display: flex;
 }
-
-.addproduct,.Addcart2,.Addcart3,.Addcart4{
-    height: 341px;
+.addproduct{
+    height: 354px;
     width: 239px;
     box-shadow: 0 0px 1px rgb(237, 232, 232);
-    margin: 0px 5px 0px 5px;
-}
+    margin: 3px 5px 3px 5px;}
 .prodimg {
     width: 100px;
     height: 100px;
     object-fit: contain;
-    margin: 10px 0px 10px 60px;
-}
+    margin: 10px 0px 35px 60px;}
 .proddetail{
     padding: 0px 14px;
     /* display: grid;
@@ -225,6 +224,11 @@ header nav ul li a{
 .star{
     font-size: x-small;
 
+}
+/* Star ratings styling */
+.checked {
+    color:  #b20710;
+    font-size: 16px;
 }
 .addcarth3{
     margin-top: 10px;
@@ -244,8 +248,8 @@ header nav ul li a{
     font-size: larger;
 }
 .proddelete{
- opacity: 0.6;
- font-size: medium;
+    opacity: 0.6;
+    font-size: medium;
 }
 /* Button Styling */
 .addcartbutton{
@@ -259,20 +263,17 @@ header nav ul li a{
     width: 90%;
     transition: background-color 0.3s ease;
 }
-/* Star ratings styling */
-.checked {
-    color:  #b20710;
-    font-size: 16px;
+
+.browseall{
+    font-size: 28px;
+    margin: 150px 0px 0px 0px;
+    text-align: center;
 }
-/* .Addcart h3,p,button{
-    padding-right: 58px;
-
-} */
+/*----Add To Cart end----*/
 
 
 
-
-/* our Advantages Start  */
+/*---our Advantages Start---*/
 .advantages{
     /* margin: 60px; */
     background-color: #1c1c1c;
@@ -294,13 +295,19 @@ header nav ul li a{
     align-items: center; /* Align items vertically in the center */
     gap: 15px; /* Add space between the icon and the text */
 }
+.advicons{
+    font-size: 30px;
+}
 .advtwo-txt {
     font-size: small;
     opacity: 0.6;
     margin-top: 3px;
     display: inline-block;
   }
-/* footer */
+
+
+
+/*--footer start--- */
 footer {
     background-color: #111;
     color: #fff;
@@ -384,5 +391,7 @@ footer {
     width: 20px;
     height: 20px;
   }
+  /*--footer end--- */
+
   
 
