--- a/product_detail.css
+++ b/product_detail.css
@@ -138,8 +138,6 @@ body {
     color: lightsteelblue;
     text-align: center;
     border-radius: 4px;
-    /* height: auto;
-    width: 170px; */
     padding: 8px 20px;
     position: relative;
     cursor: pointer;
@@ -151,8 +149,6 @@ body {
     font-size: large;
     text-decoration: none;
     color: lightsteelblue;
-    /* height: 20px;
-    width: 170px; */
     border: 1px;
     padding: 8px 20px;
     position: relative;
@@ -166,8 +162,8 @@ body {
     color: lightsteelblue;
     text-align: center;
     border-radius: 4px;
-    height: 40px;
-    width: 170px;
+    height: 37px;
+    width: 150px;
     padding: 8px 20px;
     position: relative;
     text-decoration: none;
@@ -254,8 +250,6 @@ body {
     margin: 150px 0px 0px 0px;
     text-align: center;
 }
-
-
 /* Style  dot */
 .dot-menu {
     display: flex;
@@ -264,17 +258,13 @@ body {
     padding: 0;
     margin: 40px 0px 0px 0px;
 }
-.dot-menu li {
+.dot-menu a li {
     width: 5px;
     height: 5px;    
     border-radius: 50%;
     margin: 0 5px;
 }
-
-
-
-
-/*----Related Products Start------ */
+/*----Related Products End------ */
 
 
 
