--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 130px 0px 80px 0px;
+    margin: 130px 0px 130px 0px;
     background-color: #1c1c1c;
 }
 .hero-text{
@@ -166,8 +166,8 @@ margin-right: 20px;
         font-size: 20px;
     }
     .herobutton {
-        width: 60%;
-        margin-top: 30px;
+        /* width: 60%; */
+        margin-top: 20px;
     }
 }
 /* banner image End */
@@ -192,7 +192,6 @@ margin-right: 20px;
 /* featured-products Start */
 .featured-products {
     margin-top: 40px;
-    padding: 40px;
     background-color: #1c1c1c;
 }
 
@@ -210,11 +209,6 @@ margin-right: 20px;
     margin-top: 90px;
    
 }
-.products img{
-    width: 100px;
-    margin-bottom: 10px;
-}
-
 .product-card1,.product-card5{
     background-color: #1c1c1c;
     padding: 20px;
@@ -234,40 +228,63 @@ margin-right: 20px;
     transform: scale(1.3);
 }
 
-.product-card1 img{
+.product-card1 img , .product-card2 img,.product-card3 img,.product-card4 img,.product-card5 img{
     width: 100px;
-    margin-bottom: 10px;
+    margin: 10px 0px;
 
 }
-.product-card2 img{
-    width: 100px;
-    margin-bottom: 10px;
 
-}
-.product-card3 img{
-    width: 100px;
-    margin: 0px 0px 10px 0px;
-}
-.product-card4 img{
-    width: 100px;
-    margin-bottom: 10px;
-
-}
-.product-card5 img {
-    width: 100px;
-    margin-bottom: 10px;
-}
 .product-card1 p,.product-card2 p,.product-card3 p,.product-card4 p,.product-card5 p {
     margin: 10px 0;
     font-size: 18px;
 }
-/* Top Product */
+
+
+/* Small screens (max-width: 767px) */
+@media (max-width: 767px) {
+    
+    .featured-products h2 {
+        
+        margin: 60px 0px 0px 0px;
+        text-align: center;
+    }
+    .products {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: space-around;
+        transition: transform 0.3s ease;
+        margin-top: 0px;  
+    }
+    
+    }
+    
+    
+    /* Medium screens (min-width: 768px and max-width: 1024px) */
+    @media (min-width: 768px) and (max-width: 1024px) {       
+    .featured-products h2 {
+        
+        margin: 60px 0px 0px 0px;
+        text-align: center;
+    }
+    .products {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: space-around;
+        transition: transform 0.3s ease;
+        margin-top: 90px;  
+    }
+    }
+/* Featured products End    */
+
+
+
+/* Top Product Start*/
 .top-product{
-    padding: 40px;
     background-color: #1c1c1c;
 }
 .top-product h2{
     font-size: 24px;
+    margin-top: 80px;
     margin-bottom: 20px;
     text-align: center;
 }
@@ -292,6 +309,31 @@ margin-right: 20px;
     background-color: #e60023;
     padding: 4px 8px; 
 }
+
+/* Small screens (max-width: 767px) */
+@media (max-width: 767px) {
+    .product-filters{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    .product-filters a{
+        color: lightsteelblue;
+        padding: 3px 0px; 
+        margin: 5px 0px;
+        border: none;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    .product-filters a:nth-child(1){
+        background-color: #e60023;
+    
+    }
+    .product-filters a:hover{
+        background-color: #e60023;
+        padding: 3px 0px; 
+    }
+}
+/* Top Product End */
 
 
 
@@ -422,15 +464,17 @@ margin-right: 20px;
 .footerHome {
     background-color: #111;
     /* color: #fff; */
-    padding: 40px 0;
+    /* margin: 40px 0; */
+    /* margin-top: 40px; */
     font-family: 'Arial', sans-serif;
+
 }
   
   .footer-container {
     display: flex;
     justify-content: space-around;
-    /* width: 100%; */
-    margin: 0px 0px 40px 20px;
+    margin-left: 20px;
+    padding-top: 40px;
 
   }
   .footer-column1{
@@ -507,7 +551,7 @@ margin-right: 20px;
   }
   
   .footerdisc {
-    margin: 25px 0px 0px 20px;
+    margin: 30px 0px 30px 20px;
     font-size: 14px;
   }
   
