--- a/style.css
+++ b/style.css
@@ -206,8 +206,7 @@ margin-right: 20px;
     grid-template-columns: repeat(5, 1fr);
     justify-content: space-around;
     transition: transform 0.3s ease;
-    margin-top: 90px;
-   
+    margin-top: 90px;   
 }
 .product-card1,.product-card5{
     background-color: #1c1c1c;
@@ -238,42 +237,6 @@ margin-right: 20px;
     margin: 10px 0;
     font-size: 18px;
 }
-
-
-/* Small screens (max-width: 767px) */
-@media (max-width: 767px) {
-    
-    .featured-products h2 {
-        
-        margin: 60px 0px 0px 0px;
-        text-align: center;
-    }
-    .products {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-content: space-around;
-        transition: transform 0.3s ease;
-        margin-top: 0px;  
-    }
-    
-    }
-    
-    
-    /* Medium screens (min-width: 768px and max-width: 1024px) */
-    @media (min-width: 768px) and (max-width: 1024px) {       
-    .featured-products h2 {
-        
-        margin: 60px 0px 0px 0px;
-        text-align: center;
-    }
-    .products {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        justify-content: space-around;
-        transition: transform 0.3s ease;
-        margin-top: 90px;  
-    }
-    }
 /* Featured products End    */
 
 
@@ -290,7 +253,6 @@ margin-right: 20px;
 }
 .product-filters{
     display: flex;
-    /* justify-content: center; */
     justify-content: space-evenly;
 }
 .product-filters a{
@@ -310,33 +272,6 @@ margin-right: 20px;
     padding: 4px 8px; 
 }
 
-/* Small screens (max-width: 767px) */
-@media (max-width: 767px) {
-    .product-filters{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-    }
-    .product-filters a{
-        color: lightsteelblue;
-        padding: 3px 0px; 
-        margin: 5px 0px;
-        border: none;
-        cursor: pointer;
-        text-decoration: none;
-    }
-    .product-filters a:nth-child(1){
-        background-color: #e60023;
-    
-    }
-    .product-filters a:hover{
-        background-color: #e60023;
-        padding: 3px 0px; 
-    }
-}
-/* Top Product End */
-
-
-
 
 /*----Add To Cart Start------ */
 .Addcart {
@@ -345,9 +280,6 @@ margin-right: 20px;
     background-color: #1c1c1c;
     margin: 40px 0px;
     color: lightsteelblue;
-    /* display: grid;
-    grid-template-columns: repeat(1,1fr);
-    align-items: center; */
 }
 .Addcartrow1{
     display: flex;
@@ -357,7 +289,6 @@ margin-right: 20px;
     height: 354px;
     width: 239px;
     border: 1px solid  #444;
-    /* box-shadow: 0 0px 1px rgb(237, 232, 232); */
     margin: 3px;
 }
 .prodimg {
@@ -368,11 +299,6 @@ margin-right: 20px;
 }
 .proddetail{
     margin: 0px 14px;
-    /* padding: 0px 14px; */
-    /* display: grid;
-    grid-template-columns: repeat(1 , 1fr);
-    align-content: space-between;
-    grid-gap: 3px; */
 }
 .star{
     font-size: x-small;
@@ -430,8 +356,6 @@ margin-right: 20px;
 .advantages{
     background-color: #1c1c1c;
     margin-top: 80px;
-
-
 }
 .advantages h2{
     margin-top: 80px;
@@ -442,9 +366,9 @@ margin-right: 20px;
     margin: 100px 0px;
 }
 .advantage-name .Delivery,.advantage-name .Brand,.advantage-name .deels,.advantage-name .payments {
-    display: flex; /* Use flexbox to align icon and text horizontally */
-    align-items: center; /* Align items vertically in the center */
-    gap: 15px; /* Add space between the icon and the text */
+    display: flex;
+    align-items: center; 
+    gap: 15px; 
 }
 .advicons{
     font-size: 30px;
@@ -463,98 +387,128 @@ margin-right: 20px;
 /*--footer start--- */
 .footerHome {
     background-color: #111;
-    /* color: #fff; */
-    /* margin: 40px 0; */
-    /* margin-top: 40px; */
     font-family: 'Arial', sans-serif;
+}
+
+.footer-container {
+display: flex;
+justify-content: space-around;
+/* margin-left: 20px; */
+padding-top: 40px;
 
 }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 20px;
-    padding-top: 40px;
+.footer-column1{
+flex: 8;
+margin-left: 20px;
+}
+.footer-column {
+margin-left: 144px;
+flex: 4;
+}
 
-  }
-  .footer-column1{
-    flex: 8;
-  }
-  .footer-column {
-    margin-left: 144px;
-    flex: 4;
-  }
-  
-  .footerHeading {
-    font-size: 18px;
-  }
-  .headDiscription{
-    margin-top: 15px;
-     font-size: 15px;
-    opacity: 0.7;
-  }
-  
-  .footer-column ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-column ul li {
-    margin-bottom: 10px;
-    margin-top: 18px;
-  }
-  
-  .footer-column ul li a {
-    color: lightsteelblue;
-    opacity: 0.6;
-    text-decoration: none;
-    font-size: 14px;
-  }
-  
-  .footer-column ul li a:hover {
-    color: #e63946;
-  }
-  
-  .footer-column form {
-    /* display: flex; */
-  }
-  
-  .footer-column1 input {
-    background-color: #111;
-    margin-top: 15px;
-    padding: 10px;
-    border: 1px solid lightsteelblue;
-    outline: none;
-    width: 70%;
-  }
-  
-  .footer-column1 button {
+.footerHeading {
+font-size: 18px;
+}
+.headDiscription{
+margin-top: 15px;
+    font-size: 15px;
+opacity: 0.7;
+}
+
+.footer-column ul {
+list-style: none;
+padding: 0;
+}
+
+.footer-column ul li {
+margin-bottom: 10px;
+margin-top: 18px;
+}
+
+.footer-column ul li a {
+color: lightsteelblue;
+opacity: 0.6;
+text-decoration: none;
+font-size: 14px;
+}
+
+.footer-column ul li a:hover {
+color: #e63946;
+}
+
+.footer-column form {
+/* display: flex; */
+}
+
+.footer-column1 input {
+background-color: #111;
+margin-top: 15px;
+padding: 10px;
+border: 1px solid lightsteelblue;
+outline: none;
+width: 70%;
+}
+
+.footer-column1 button {
     margin-top: 15px;
     padding: 8px 80px 8px 20px;
-    /* padding: 19px; */
     border: none;
     border-radius: 7px;
     background-color: #ec081b;
     color: #fff;
     cursor: pointer;
     width: 30%;
-  }
-  /*--footer End--- */
- 
-/* -- footer Bottom Start -- */
-  .footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0px 0px 0px;
-    border-top: 1px solid #333;
+}
 
-  }
-  
-  .footerdisc {
-    margin: 30px 0px 30px 20px;
-    font-size: 14px;
-  }
-  
+/* Small screens (max-width: 767px) */
+@media (max-width: 767px) {   
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: space-around;
+    padding-top: 20px;   
+    }
+.footer-column1{
+    margin-top: 40px;
+    margin-left: 20px;
+    }
+    .footer-column {
+    margin-top: 40px;
+    margin-left: 20px;
+    }
+}
+
+/* Medium screens (min-width: 768px and max-width: 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .footer-container {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        justify-content: space-around;
+        padding-top: 20px;   
+    }
+    .footer-column1{
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+        .footer-column {
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+} 
+
+/*--footer End--- */
+
+/* -- footer Bottom Start -- */
+.footer-bottom {
+display: flex;
+justify-content: space-between;
+margin: 40px 0px 0px 0px;
+border-top: 1px solid #333;
+}
+.footerdisc {
+margin: 30px 0px 30px 20px;
+font-size: 14px;
+}
 .social-icons{
     margin: 25px 70px 0px 0px;
     display: flex;
@@ -564,6 +518,6 @@ margin-right: 20px;
 /* -- footer Bottom End -- */
 
 
-  
 
-  
+
+
